minor changes to html structure

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <br><br>
               </div>
 
+              <div class="nav-container">
                 <ul class="nav-buttons">
                     <li><a href="#work" data-toggle="collapse" data-target="#work"><span class="glyphicon glyphicon-picture"></span>  Work</a></li>
                     <li><a href="#about" data-toggle="collapse" data-target="#about"><span class="glyphicon glyphicon-user"></span>  About</a></li>
@@ -33,10 +34,10 @@
                     <li><button type="button" class="btn btn-default" data-toggle="collapse" data-target="#work"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>    Work</button></li>
                     <li><button type="button" class="btn btn-default" data-toggle="collapse" data-target="#about"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>   About</button></li>
                     <li><button type="button" class="btn btn-default" data-toggle="collapse" data-target="#contact"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>    Contact</button></li>
-                    <li><button type="button" class="btn btn-default" data-toggle="collapse" href="http://wwww.github.com/m-art-inc"><span class="glyphicon glyphicon-console"></span>    Github</button></li>
-                    <li><button type="button" class="btn btn-default" data-toggle="collapse" href="http://www.twitter.com"><span class="glyphicon glyphicon-eye-open"></span>    Twitter</button></li>
-                </ul>
+
                 <br>
+              </div>
+
             </div>
 
             <div class="template">
