--- a/index.html
+++ b/index.html
@@ -2,91 +2,202 @@
 <html lang="en">
 
 <head>
-    <title>Martin's Portfolio</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/stylesmaster.css" media="screen" title="no title" charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="graphic design and web development portfolio">
+    <meta name="author" content="Martin Carmne">
+
+    <title>Martin Carmen Portfolio</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico|Ubuntu" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="css/grayscale.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 </head>
 
-<body>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <div class="container-fluid">
-        <div class="row content">
-            <div class="col-sm-3 sidenav">
-              <img src="images/MCClogo.svg" alt="logo" >
-              <div class="title">
-                <h2>Martin's Portfolio</h2>
-                <br><br>
-              </div>
-
-              <div class="nav-container">
-                <ul class="nav-buttons">
-                    <li><a href="#work" data-toggle="collapse" data-target="#work"><span class="glyphicon glyphicon-picture"></span>  Work</a></li>
-                    <li><a href="#about" data-toggle="collapse" data-target="#about"><span class="glyphicon glyphicon-user"></span>  About</a></li>
-                    <li><a href="#contact" data-toggle="collapse" data-target="#contact"><span class="glyphicon glyphicon-book"></span>  Contact</a></li>
-                    <li><a href="https://github.com/m-art-inc"><span class="glyphicon glyphicon-console"></span>  Github</a></li>
-                    <li><a href="https://twitter.com/m_art_inc"><span class="glyphicon glyphicon-eye-open"></span>  Social</a></li>
-                    <li><button type="button" class="btn btn-default" data-toggle="collapse" data-target="#work"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>    Work</button></li>
-                    <li><button type="button" class="btn btn-default" data-toggle="collapse" data-target="#about"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>   About</button></li>
-                    <li><button type="button" class="btn btn-default" data-toggle="collapse" data-target="#contact"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>    Contact</button></li>
-
-                <br>
-              </div>
-
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"><i class="fa fa-bars"></i></button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <!-- <i class="fa fa-play-circle"></i> <span class="light">Martin Carmen</span> -->
+                    <img class="navbar-brand mylogo" src="img/mylogo.svg" alt="logo" />
+                </a>
             </div>
 
-            <div class="template">
-              <div class="col-sm-9">
-                  <h4><small>Latest Project</small></h4>
-                  <hr>
-                  <h2>Title of Project</h2>
-                  <h5><span class="glyphicon glyphicon-time"></span> Date of project</h5>
-                  <h5><span class="label label-danger">webdesign</span><span class="label label-primary">graphicdesign</span></h5><br>
-                  <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                      consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  <br><br>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#work">Work</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/m-art-inc"><i class="fa fa-github fa-fw"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/martincarmen03?trk=nav_responsive_tab_profile_pic"><i class="fa fa-linkedin fa-fw"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/m_art_inc"><i class="fa fa-twitter fa-fw"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-                  <div id="work" class="collapse">
-                      <h2>My Work</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                      <br>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  </div>
-                  <br><br>
-
-                  <div id="about" class="collapse">
-                      <h2>About</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                      <br>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  </div>
-                  <br><br>
-
-                  <div id="contact" class="collapse">
-                      <h2>Contact</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                      <br>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                  </div>
-              </div>
+    <!-- Intro Header -->
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading">Welcome to my Portfolio</h1>
+                        <p class="intro-text">Please scroll down on the page to find out more.</p>
+                        <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </header>
 
-    <footer class="container-fluid">
-      <div>
-        <p>&copy; 2016 | M-Art-Inc</p>
-      </div>
+
+    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <img id="me" src="img/me.jpg" alt="me" />
+                <h2>About Me</h2>
+                <p>Hi my name is Martin and I am a human that likes things such as design and programming.</p>
+                <p>This webpage was made to visually illustrate and showcase my work. Feel free to look around and check out my work</p>
+                <p id="emoji">🍻</p>
+                <a href="#work" class="btn btn-circle page-scroll">
+                    <i class="fa fa-angle-double-down animated"></i>
+                </a>
+            </div>
+        </div>
+        <br><br>
+    </section>
+            <hr>
+    <!-- Work Section -->
+    <section id="work" class="content-section text-center">
+        <div class="work-section">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2 id="colored-heading">Work:</h2>
+                    <p>Below you can find a mixture of projects ranging from Graphic Design to Web Development.</p>
+                    <br><br>
+                    <!-- Template Section -->
+                        <div class="row">
+                            <div id="templateDiv" class="main-template">
+                                <!-- Bio -->
+                                <div id="sectionWrapper">
+                                    <div class="col-lg-8 col-lg-offset-2">
+                                        <div>
+                                            <h3 class="pieceTitle">Title</h3>
+                                            <div class="imgUrl" id="macbook-img"></div>
+                                              <br><br>
+                                            <span class="dateTime">Date</span>
+                                        </div>
+                                        <div class="description">
+                                            <p>VHS pitchfork godard tousled austin mixtape YOLO, tacos wayfarers keytar master cleanse. Post-ironic you probably haven't heard of them kinfolk marfa, before they sold out iPhone man bun pop-up ethical godard next level
+                                                3 wolf moon irony drinking vinegar cornhole. Pickled brunch keffiyeh tote bag paleo. Raw denim tattooed taxidermy messenger bag kale chips knausgaard. Actually letterpress artisan semiotics. Tattooed VHS DIY lo-fi post-ironic
+                                                iPhone. Chambray XOXO photo booth pinterest flexitarian, portland crucifix knausgaard sustainable kogi farm-to-table vice ethical irony.</p>
+                                            <br><br>
+                                            <address class="data-url"><a href="">url</a></address>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            <!-- </div> -->
+        </div>
+        <hr>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Contact</h2>
+                <p>Feel free to contact me if you want to work together or just to say hello!</p>
+                <p><a href="mailto:martincarmen03@gmail.com">martincarmen03@gmail</a>
+                </p>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="https://github.com/m-art-inc" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/martincarmen03?trk=nav_responsive_tab_profile_pic" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/m_art_inc" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                </ul>
+            </div>
+            <br>
+            <h1 id="keep-portland-weird">Keeping Portland Weird!</h1>
+        </div>
+    </section>
+
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; 2016 | Martin Carmen</p>
+        </div>
     </footer>
+
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="js/grayscale.min.js"></script>
+
+    <!-- Main JavaScript -->
+    <script src="js/portfolioData.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
