deleted un-needed code

--- a/index.html
+++ b/index.html
@@ -139,29 +139,9 @@
                 <br><br>
                 <!-- Template Section -->
                 <div class="row">
-                    <div id="templateDiv" class="main-template">
-                        <!-- Bio -->
-                        <!-- <div id="sectionWrapper">
-                            <div class="col-lg-8 col-lg-offset-2">
-                                <div>
-                                    <h3 class="pieceTitle">Title</h3>
-                                    <div class="imgUrl" id="macbook-img"></div>
-                                    <br><br>
-                                    <span class="dateTime">Date</span>
-                                </div>
-                                <div class="description">
-                                    <p>VHS pitchfork godard tousled austin mixtape YOLO, tacos wayfarers keytar master cleanse. Post-ironic you probably haven't heard of them kinfolk marfa, before they sold out iPhone man bun pop-up ethical godard next level
-                                        3 wolf moon irony drinking vinegar cornhole. Pickled brunch keffiyeh tote bag paleo. Raw denim tattooed taxidermy messenger bag kale chips knausgaard. Actually letterpress artisan semiotics. Tattooed VHS DIY lo-fi
-                                        post-ironic iPhone. Chambray XOXO photo booth pinterest flexitarian, portland crucifix knausgaard sustainable kogi farm-to-table vice ethical irony.</p>
-                                    <br><br>
-                                    <address class="data-url"><a href="">url</a></address>
-                                </div>
-                            </div>
-                        </div> -->
-                    </div>
+                    <div id="templateDiv" class="main-template"></div>
                 </div>
             </div>
-            <!-- </div> -->
         </div>
         <hr>
     </section>
@@ -202,19 +182,14 @@
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
     <!-- handlebars.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
-
     <!-- Main JavaScript -->
     <script src="js/portfolioData.js"></script>
     <script src="js/main.js"></script>
