--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 <span class='dateTime'>{{date}}</span>
                 <br><br><br><br>
             </div>
-            <div class='imgUrl' id='macbook-img'>{{{'imgUrl'}}}</div>
+            <div class='imgUrl' id="macbook-img">{{{'imgUrl'}}}</div>
             <br><br>
             <div class="description">
                 <p>{{description}}</p>
             </div>
-            <address><a href={{url}}>{{{'url'}}}</a></address>
+            <address><a href='url'>{{{'url'}}}</a></address>
             <br><br>
         </div>
 
@@ -59,7 +59,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"><i class="fa fa-bars"></i></button>
                 <a class="navbar-brand page-scroll" href="#page-top">
                     <!-- <i class="fa fa-play-circle"></i> <span class="light">Martin Carmen</span> -->
-                    <img class="navbar-brand mylogo" src="img/mylogo.svg" alt="logo" />
+                    <div><img class="mylogo" src="img/mcclogonewwhite.svg"/></div>
                 </a>
             </div>
 
@@ -117,7 +117,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <img id="me" src="img/me.jpg" alt="me" />
+                <div><img id="me" src="img/me.jpg" alt="me"/></div>
                 <h2>About Me</h2>
                 <p>Hi my name is Martin and I am a human that likes things such as design and programming.</p>
                 <p>This webpage was made to visually illustrate and showcase my work. Feel free to look around and check out my work</p>
@@ -137,7 +137,7 @@
                 <h2 id="colored-heading">Work:</h2>
                 <p>Below you can find a mixture of projects ranging from Graphic Design to Web Development.</p>
                 <br><br>
-                <!-- Template Section -->
+    <!-- Template Section -->
                 <div class="row">
                     <div id="templateDiv" class="main-template"></div>
                 </div>
@@ -189,10 +189,10 @@
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- Theme JavaScript -->
-    <script src="js/grayscale.min.js"></script>
+    <script src="scripts/grayscale.min.js"></script>
     <!-- Main JavaScript -->
-    <script src="js/portfolioData.js"></script>
-    <script src="js/main.js"></script>
+    <script src="scripts/portfolioData.js"></script>
+    <script src="scripts/main.js"></script>
 
 </body>
 
