--- a/index.html
+++ b/index.html
@@ -31,19 +31,18 @@
 
     <script id="template" type="text/x-handlebars-template">
 
-        <div id="sectionWrapper">
-            <div>
-                <h3 class='pieceTitle'>{{title}}</h3>
-                <span class='dateTime'>{{date}}</span>
+        <div id="templateWrapper">
+                <address><a href="title"><h3>{{title}}</h3></a></address>
+                <span class="dateTime">{{date}}</span>
                 <br><br><br><br>
-            </div>
-            <div class='imgUrl' id="macbook-img">{{{'imgUrl'}}}</div>
+
+            <div class="imgUrl" id="macbook-img">{{{'imgUrl'}}}</div>
             <br><br>
             <div class="description">
-                <p>{{description}}</p>
+                <p>{{{description}}}</p>
             </div>
-            <address><a href='url'>{{{'url'}}}</a></address>
-            <br><br>
+              <address><a href="url">{{{url}}}</a></address>
+              <br><br><br>
         </div>
 
     </script>
@@ -137,9 +136,10 @@
                 <h2 id="colored-heading">Work:</h2>
                 <p>Below you can find a mixture of projects ranging from Graphic Design to Web Development.</p>
                 <br><br>
+                <div id="templateContent"></div>
     <!-- Template Section -->
                 <div class="row">
-                    <div id="templateDiv" class="main-template"></div>
+                    <div class="main-template"></div>
                 </div>
             </div>
         </div>
@@ -184,15 +184,20 @@
     <script src="vendor/jquery/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Plugin JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- handlebars.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- Theme JavaScript -->
     <script src="scripts/grayscale.min.js"></script>
     <!-- Main JavaScript -->
     <script src="scripts/portfolioData.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/portfolioView.js"></script>
+
+    <script>
+            Piece.fetchData(portfolioView.initIndexPage);
+    </script>
 
 </body>
 
