added div area to display number of words.

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
         <div class="container text-center">
             <p>Copyright &copy; 2016 | Martin Carmen</p>
         </div>
+        <div>
+          <p id="footerContent"></p>
+        </div>
     </footer>
 
     <!-- jQuery -->
