renamed section id for number of words count

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <p>Copyright &copy; 2016 | Martin Carmen</p>
         </div>
         <div>
-          <p id="footerContent"></p>
+          <p id="totalWords"></p>
         </div>
     </footer>
 
