--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 
     <script id="template" type="text/x-handlebars-template">
 
-        <div id="templateWrapper">
+        <div class="col-md-8 col-md-offset-2">
                 <address><a href="title"><h3>{{title}}</h3></a></address>
                 <span class="dateTime">{{date}}</span>
                 <br><br><br><br>
-
             <div class="imgUrl" id="macbook-img">{{{'imgUrl'}}}</div>
             <br><br>
             <div class="description">
