minor changes to template script

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script id="template" type="text/x-handlebars-template">
 
         <div class="col-md-8 col-md-offset-2">
-                <address><a href="title"><h3>{{title}}</h3></a></address>
+                <address><a href="{{gitUrl}}"><h3>{{title}}</h3></a></address>
                 <span class="dateTime">{{date}}</span>
                 <br><br><br><br>
             <div class="imgUrl" id="macbook-img">{{{'imgUrl'}}}</div>
