--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
 
     <script id="template" type="text/x-handlebars-template">
 
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-lg-12">
                 <address><a href="{{gitUrl}}"><h3>{{title}}</h3></a></address>
                 <span class="dateTime">{{date}}</span>
                 <br><br><br><br>
-            <div class="imgUrl" id="macbook-img">{{{'imgUrl'}}}</div>
+            <div class="imgUrl">
+              <div id="macbook-img">{{{'imgUrl'}}}</div>
+            </div>
             <br><br>
             <div class="description">
                 <p>{{{description}}}</p>
