added dash to nav links

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="/about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#work">Work</a>
+                        <a class="page-scroll" href="/">Work</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="/contact">Contact</a>
                     </li>
                     <li>
                         <a href="https://github.com/m-art-inc"><i class="fa fa-github fa-fw"></i></a>
