--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <a class="page-scroll" href="/about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/">Work</a>
+                        <a class="page-scroll" href="/work">Work</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/contact">Contact</a>
@@ -103,7 +103,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Welcome to my Portfolio</h1>
                         <p class="intro-text">Please scroll down on the page to find out more.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="/about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
@@ -117,12 +117,12 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <div><img id="me" src="img/me.jpg" alt="me"/></div>
                 <h2>About Me</h2>
+                <div><img id="me" src="img/me.jpg" alt="me"/></div>
                 <p>Hi my name is Martin and I am a human that likes things such as design and programming.</p>
                 <p>This webpage was made to visually illustrate and showcase my work. Feel free to look around and check out my work</p>
                 <p id="emoji">🍻</p>
-                <a href="#work" class="btn btn-circle page-scroll">
+                <a href="/work" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
                 </a>
             </div>
@@ -131,20 +131,16 @@
     </section>
     <hr>
     <!-- Work Section -->
-    <section id="work" class="content-section text-center">
-        <div class="work-section">
+    <section id="work" class="container content-section text-center">
+        <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 id="colored-heading">Work:</h2>
                 <p>Below you can find a mixture of projects ranging from Graphic Design to Web Development.</p>
-                <br><br>
+                <!-- Template renders below-->
                 <div id="templateContent"></div>
-    <!-- Template Section -->
-                <div class="row">
-                    <div class="main-template"></div>
-                </div>
+
             </div>
         </div>
-        <hr>
     </section>
 
     <!-- Contact Section -->
@@ -192,16 +188,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- handlebars.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+    <!-- page.js -->
+    <script src="vendor/page.js"></script>
+    <!-- <script src="/scripts/githubToken.js"></script> -->
     <!-- Theme JavaScript -->
     <script src="scripts/grayscale.min.js"></script>
     <!-- Main JavaScript -->
-    <script src="scripts/portfolioData.js"></script>
+    <!-- <script src="scripts/portfolioData.js"></script> -->
     <script src="scripts/main.js"></script>
     <script src="scripts/portfolioView.js"></script>
-
-    <script>
-            Piece.fetchData(portfolioView.initIndexPage);
-    </script>
+    <script src="scripts/aboutController.js"></script>
+    <script src="scripts/workController.js"></script>
+    <script src="scripts/contactController.js"></script>
+    <script src="scripts/routes.js"></script>
 
 </body>
 
