--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
 
     <script id="template" type="text/x-handlebars-template">
-
         <div class="col-lg-12">
                 <address><a href="{{gitUrl}}"><h3>{{title}}</h3></a></address>
                 <span class="dateTime">{{date}}</span>
@@ -45,6 +44,25 @@
               <address><a href="url">{{{url}}}</a></address>
               <br><br><br>
         </div>
+    </script>
+
+    <!-- Repo Script -->
+    <script id="repo-template" type="text/x-handlebars-template">
+      <li>
+        <a href="{{html_url}}" target="_blank"><h3>{{name}}</h3></a>
+        <p>Name: {{name}}</p>
+        <p>Description: {{description}}</p>
+        <p>Language: {{language}}</p>
+        <p>Created: {{created_at}}</p>
+        <p>Last updated: {{updated_at}}</p>
+        <p>Url: {{url}}</p>
+        <!-- // LOOK: A Handlebars `if` block! -->
+        {{#if watchers_count}}
+          <p>{{watchers_count}} watching this repo</p>
+        {{/if}}
+
+      </li>
+      <hr>
 
     </script>
 
@@ -78,6 +96,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="/contact">Contact</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/repos">Repos</a>
                     </li>
                     <li>
                         <a href="https://github.com/m-art-inc"><i class="fa fa-github fa-fw"></i></a>
@@ -122,7 +143,7 @@
                 <p>Hi my name is Martin and I am a human that likes things such as design and programming.</p>
                 <p>This webpage was made to visually illustrate and showcase my work. Feel free to look around and check out my work</p>
                 <p id="emoji">🍻</p>
-                <a href="/work" class="btn btn-circle page-scroll">
+                <a href="/repos" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
                 </a>
             </div>
@@ -130,6 +151,21 @@
         <br><br>
     </section>
     <hr>
+
+    <!-- Repo Export Section -->
+    <section id="repos" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2 id="colored-heading">Check out my Projects on GitHub:</h2>
+                <ul>
+                  <li>Coding</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
+
     <!-- Work Section -->
     <section id="work" class="container content-section text-center">
         <div class="row">
@@ -142,6 +178,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
@@ -188,19 +225,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- handlebars.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+    <!-- <script src="vendor/marked.js"></script>
+    <script src="vendor/html5sql.js"></script>
+    <script src="scripts/webdb.js"></script> -->
     <!-- page.js -->
     <script src="vendor/page.js"></script>
     <!-- <script src="/scripts/githubToken.js"></script> -->
     <!-- Theme JavaScript -->
     <script src="scripts/grayscale.min.js"></script>
+    <script src="scripts/githubToken.js"></script>
     <!-- Main JavaScript -->
-    <!-- <script src="scripts/portfolioData.js"></script> -->
     <script src="scripts/main.js"></script>
     <script src="scripts/portfolioView.js"></script>
-    <script src="scripts/aboutController.js"></script>
     <script src="scripts/workController.js"></script>
+    <!-- Repo scripts -->
+    <script src="scripts/repo.js"></script>
+    <script src="scripts/repoView.js"></script>
+    <script src="scripts/aboutController.js"></script>
+    <script src="scripts/reposController.js"></script>
     <script src="scripts/contactController.js"></script>
     <script src="scripts/routes.js"></script>
+
+
 
 </body>
 
